Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-42247

Missing Q_CC_CLANG in documentation on website

    XMLWordPrintable

Details

    Description

      Q_CC_CLANG is not in the list documented on the website

      I'm using Qt 5.3.0, and there Q_CC_CLANG is present in qcompilerdetection.h (See attachment)

      I'm not sure if this is a documentation issue or not, please move the bug if it is so.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kdpalara Kavindra Palaraja
            xarxer Pontus Sjögren
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes